# all-skills-view

./: .gitignore  README.md  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  zhDescription.test.ts  zhDescription.ts
release/: RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4-rc.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.1.7.md
release/macos/v0.1.0/: GITHUB_RELEASE_BODY.md  SHA256SUMS.txt
release/macos/v0.1.1/: GITHUB_RELEASE_BODY.md  SHA256SUMS.txt
release/macos/v0.1.2/: GITHUB_RELEASE_BODY.md  SHA256SUMS.txt
release/verification/: r3-03-correction-samples.md  r3-03b-correction-samples.md  r3-03c-local-20-details.json  r3-03c-local-20-samples.cjs  r3-03c-local-20-summary.json  r3-03c-local-20-summary.md  r6-01-skill-market-links.md  r6-02-global-skill-labels.md  r6-03-multiline-frontmatter-fix.md  r6-03-zh-description-derived-from-source.md  r7-02-list-description-layout.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  db.rs  lib.rs  models.rs  path_security.rs
src-tauri/src/adapters/: claudcode.rs  codex.rs  cursor.rs  mod.rs  openclaw.rs  opencode.rs
src-tauri/src/services/: audit_log.rs  conflict_service.rs  index_service.rs  mod.rs  nfr_benchmark.rs  scan_service.rs  target_service.rs  transfer_service.rs  translation_service.rs
(+11 files in other folders)
